[package]
name = "kebab-chunk"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Chunkers that turn kb-core::CanonicalDocument into kb-core::Chunk batches (§3.5, §4.2, §7.2)"

[dependencies]
kebab-core = { path = "../kebab-core" }
serde_json_canonicalizer   = "0.3"
blake3                     = { workspace = true }
anyhow                     = { workspace = true }
tracing                    = { workspace = true }
serde_yaml_ng              = { workspace = true }
lindera        = { workspace = true, features = ["embed-ko-dic"] }
lindera-ko-dic = { workspace = true, features = ["embed-ko-dic"] }

[dev-dependencies]
# kb-parse-md / kb-parse-code are dev-only — used by the snapshot integration
# tests to build a CanonicalDocument from fixture files. kb-parse-md absorbed
# kb-normalize in v0.19.0 (HOTFIXES.md 2026-05-26). Forbidden as regular deps
# per design §8 (chunker consumes CanonicalDocument from kb-core only);
# `cargo tree -p kb-chunk --depth 1` (default scope, excludes dev-deps)
# confirms this.
kebab-parse-md   = { path = "../kebab-parse-md" }
kebab-parse-code = { path = "../kebab-parse-code" }
serde_json       = { workspace = true }
time             = { workspace = true }

[lints]
workspace = true
