[package]
name = "kebab-embed-local"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Local fastembed-rs adapter implementing kb_core::Embedder (multilingual-e5-large default, e5-small backwards-compat)"

[dependencies]
kebab-core = { path = "../kebab-core" }
kebab-config = { path = "../kebab-config" }
# Default features bring `ort-download-binaries` (bundled ONNX runtime)
# and `hf-hub-native-tls` (first-run model download). No extra features
# needed for the multilingual-e5-{small,large} paths.
fastembed = { workspace = true }
tracing   = { workspace = true }
anyhow    = { workspace = true }

[dev-dependencies]
# `tests/embed_model.rs` uses `kebab_core::assert_unit_norm` /
# `assert_vector_shape` (the `mock` module's test helpers, gated OFF by
# default). Enable the feature for the test build only.
kebab-core = { path = "../kebab-core", features = ["mock"] }
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
