[package]
name = "kebab-embed"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Embedder trait re-exports + opt-in deterministic MockEmbedder for downstream tests"

[dependencies]
kebab-core = { path = "../kebab-core" }
kebab-config = { path = "../kebab-config" }
serde      = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
# Used only by `MockEmbedder` (feature = "mock") for deterministic per-component
# hashing. Kept as an unconditional dep because `blake3` is already in the
# workspace lockfile (transitively via kb-core); pulling it in here adds zero
# build cost and keeps Cargo.toml simple.
blake3     = { workspace = true }

[features]
default = []
# Opt-in `MockEmbedder`. Default OFF so release builds (no `--features mock`)
# compile the symbol out entirely (verifiable via `nm`/`cargo bloat`).
mock    = []

[dev-dependencies]
proptest = { workspace = true }
