[package]
name = "kebab-nli"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "fb-41: NLI-based post-synthesis verification (XNLI mDeBERTa-v3). PR-9a = trait + scaffolding; ONNX inference lands in PR-9b."

[dependencies]
# PR-9b: ONNX inference path activated. ort / tokenizers / hf-hub / ndarray
# all source from `[workspace.dependencies]` so the workspace pins a single
# version + feature set for the whole NLI + embed stack.
kebab-config = { path = "../kebab-config" }
anyhow       = { workspace = true }
serde        = { workspace = true }
ort          = { workspace = true }
tokenizers   = { workspace = true }
hf-hub       = { workspace = true }
ndarray      = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
