[package]
name = "kebab-nli"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "fb-41: NLI-based post-synthesis verification (XNLI mDeBERTa-v3). PR-9a = trait + scaffolding; ONNX inference lands in PR-9b."

[dependencies]
# PR-9b: ONNX inference path activated. ort / tokenizers / hf-hub / ndarray
# all source from `[workspace.dependencies]` so the workspace pins a single
# version + feature set for the whole NLI + embed stack.
kebab-config = { path = "../kebab-config" }
anyhow       = { workspace = true }
serde        = { workspace = true }
# ort: extend the workspace pin with `download-binaries` so kebab-nli
# can link the ONNX runtime when fastembed is NOT in the build graph
# (e.g. `cargo test -p kebab-nli` alone, where the per-crate feature
# union excludes kebab-embed-local + fastembed). In workspace-wide
# builds the feature gets union'd with fastembed's identical opt-in
# so no extra runtime gets pulled.
ort          = { workspace = true, features = ["download-binaries"] }
tokenizers   = { workspace = true }
hf-hub       = { workspace = true }
ndarray      = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
