[package]
name = "kebab-parse-code"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Language-aware code parsing infrastructure (lang dispatch, .git/ detect, skip helpers) for the kebab pipeline (P10-1A-1)"

[dependencies]
kebab-core       = { path = "../kebab-core" }
anyhow           = { workspace = true }
gix              = { workspace = true }
serde_json       = { workspace = true }
time             = { workspace = true }
tracing          = { workspace = true }
tree-sitter      = { workspace = true }
tree-sitter-rust = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
