[package]
name = "kebab-parse-code"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Language-aware code parsing for the kebab pipeline: lang dispatch / .git detect / skip helpers (P10-1A-1) + tree-sitter Rust AST extractor (P10-1A-2)"

[dependencies]
kebab-core       = { path = "../kebab-core" }
anyhow           = { workspace = true }
gix              = { workspace = true }
serde_json       = { workspace = true }
time             = { workspace = true }
tracing          = { workspace = true }
tree-sitter      = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python     = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-go         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
