[package]
name = "kebab-parse-md"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "Markdown frontmatter + block parsing + canonical-document lift (absorbed kb-parse-types + kb-normalize, see HOTFIXES.md 2026-05-26)"

[dependencies]
kebab-core = { path = "../kebab-core" }
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
time            = { workspace = true }
tracing         = { workspace = true }
# 흡수된 kb-normalize 의 NFKC 의존 — actual kebab-normalize/src/lib.rs:31 의
# `use unicode_normalization::UnicodeNormalization;` 가 normalize.rs 이식 시 동반.
# 이미 kebab-app 도 사용 중인 0.1 major (version drift 0).
unicode-normalization = "0.1"
# pulldown-cmark is the CommonMark parser used by the `blocks` submodule.
# GFM tables are gated by the runtime `Options::ENABLE_TABLES` flag, not a
# cargo feature; we strip the default `getopts` + `html` features since we
# only use the pull-parser API.
pulldown-cmark  = { version = "0.13", default-features = false }
# serde_yaml (dtolnay) was archived as unmaintained in 2024.
# We use the maintained fork serde_yaml_ng. Keeping the same `serde_yaml`-style
# API surface lets us swap if a different fork wins long term.
serde_yaml_ng   = { workspace = true }
toml            = "0.8"
# `lingua` ships every supported language as a feature flag; the `default`
# feature pulls all 75+ language models (huge build time + binary size).
# For p1-2 we only need a small subset for autodetect + tests. Add more
# languages here as future tasks call for them.
lingua          = { version = "1.8", default-features = false, features = [
    "korean",
    "english",
    "japanese",
    "chinese",
] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
